kubernetes/database-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: database
  namespace: home-automation
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: database
    spec:
      nodeSelector:
        database-data: 'true'
      containers:
      - name: database
        image: davesilva/home-automation-database:2.0.0
        imagePullPolicy: Always
        volumeMounts:
        - name: data
          mountPath: /usr/app/db
      volumes:
      - name: data
        hostPath:
          path: /var/lib/database
          type: DirectoryOrCreate
