kubernetes/inkplate-renderer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inkplate-renderer
  namespace: home-automation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inkplate-renderer
  template:
    metadata:
      labels:
        app: inkplate-renderer
    spec:
      containers:
      - name: inkplate-renderer
        image: davesilva/inkplate-renderer:1.1.0
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: inkplate-renderer-templates
          mountPath: /usr/app/templates
        resources:
          requests:
            cpu: 0.1
            memory: 40Mi
          limits:
            cpu: 0.1
            memory: 40Mi
      volumes:
      - name: inkplate-renderer-templates
        persistentVolumeClaim:
          claimName: inkplate-renderer
---
