kubernetes/projector-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: projector-mqtt-bridge
  namespace: home-automation
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: projector-mqtt-bridge
    spec:
      containers:
      - name: projector-mqtt-bridge
        image: davesilva/home-automation-projector:1.2.0
        imagePullPolicy: Always
