kubernetes/snips-action-handlers-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snips-action-handlers
  namespace: home-automation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snips-action-handlers
  template:
    metadata:
      labels:
        app: snips-action-handlers
    spec:
      containers:
      - name: snips-action-handlers
        image: davesilva/home-automation-snips-action-handlers:2.4.0
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 0.1
            memory: 40Mi
          limits:
            cpu: 0.1
            memory: 40Mi
