kubernetes/state-manager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: state-manager
  namespace: home-automation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: state-manager
  template:
    metadata:
      labels:
        app: state-manager
    spec:
      containers:
      - name: state-manager
        image: davesilva/home-automation-state-manager:1.0.0
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 0.1
            memory: 40Mi
          limits:
            cpu: 0.1
            memory: 40Mi
