kubernetes/volume-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: volume-mqtt-bridge
  namespace: home-automation
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: volume-mqtt-bridge
    spec:
      containers:
      - name: volume-mqtt-bridge
        image: davesilva/home-automation-volume:1.1.0
        imagePullPolicy: Always
