kubernetes/mosquitto-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  namespace: home-automation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
      - name: mosquitto
        image: davesilva/mosquitto:1.4.15-r2
        imagePullPolicy: Always
        ports:
        - containerPort: 1883
        - containerPort: 9001
        volumeMounts:
        - name: mosquitto-persistence
          mountPath: /mosquitto/data
      volumes:
      - name: mosquitto-persistence
        persistentVolumeClaim:
          claimName: mosquitto
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  namespace: home-automation
  labels:
    app: mosquitto
    kubernetes.io/name: "mosquitto"
spec:
  type: NodePort
  selector:
    app: mosquitto
  ports:
  - name: mosquitto-mqtt
    port: 1883
  - name: mosquitto-websocket
    port: 9001
  externalIPs: ["192.168.1.8"]
