kubernetes/mosquitto.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mosquitto
  namespace: home-automation
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
      - name: mosquitto
        image: davesilva/mosquitto:1.4.15-r2
        imagePullPolicy: Always
        ports:
        - containerPort: 1883
        - containerPort: 9001
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  namespace: home-automation
  labels:
    app: mosquitto
    kubernetes.io/name: "mosquitto"
spec:
  selector:
    app: mosquitto
  ports:
  - name: mosquitto-mqtt
    port: 1883
  - name: mosquitto-websocket
    port: 9001
  externalIPs: ["192.168.1.8"]
