kubernetes/snips-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snips-asr
  namespace: home-automation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snips-asr
  template:
    metadata:
      labels:
        app: snips-asr
    spec:
      securityContext:
        fsGroup: 99
      containers:
      - name: snips
        image: davesilva/snips:0.64.0
        imagePullPolicy: Always
        command: ['snips-asr']
        volumeMounts:
        - name: usr-share-snips
          mountPath: /usr/share/snips
        - name: config
          mountPath: /etc/snips.toml
          subPath: snips.toml
      volumes:
      - name: usr-share-snips
        persistentVolumeClaim:
          claimName: usr-share-snips
      - name: config
        configMap:
          name: snips-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snips-dialogue
  namespace: home-automation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snips-dialogue
  template:
    metadata:
      labels:
        app: snips-dialogue
    spec:
      securityContext:
        fsGroup: 99
      containers:
      - name: snips
        image: davesilva/snips:0.64.0
        imagePullPolicy: Always
        command: ['snips-dialogue']
        volumeMounts:
        - name: usr-share-snips
          mountPath: /usr/share/snips
        - name: config
          mountPath: /etc/snips.toml
          subPath: snips.toml
      volumes:
      - name: usr-share-snips
        persistentVolumeClaim:
          claimName: usr-share-snips
      - name: config
        configMap:
          name: snips-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snips-hotword
  namespace: home-automation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snips-hotword
  template:
    metadata:
      labels:
        app: snips-hotword
    spec:
      securityContext:
        fsGroup: 99
      containers:
      - name: snips
        image: davesilva/snips:0.64.0
        imagePullPolicy: Always
        command: ['snips-hotword']
        volumeMounts:
        - name: usr-share-snips
          mountPath: /usr/share/snips
        - name: config
          mountPath: /etc/snips.toml
          subPath: snips.toml
      volumes:
      - name: usr-share-snips
        persistentVolumeClaim:
          claimName: usr-share-snips
      - name: config
        configMap:
          name: snips-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snips-nlu
  namespace: home-automation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snips-nlu
  template:
    metadata:
      labels:
        app: snips-nlu
    spec:
      securityContext:
        fsGroup: 99
      containers:
      - name: snips
        image: davesilva/snips:0.64.0
        imagePullPolicy: Always
        command: ['snips-nlu']
        volumeMounts:
        - name: usr-share-snips
          mountPath: /usr/share/snips
        - name: config
          mountPath: /etc/snips.toml
          subPath: snips.toml
      volumes:
      - name: usr-share-snips
        persistentVolumeClaim:
          claimName: usr-share-snips
      - name: config
        configMap:
          name: snips-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snips-tts
  namespace: home-automation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snips-tts
  template:
    metadata:
      labels:
        app: snips-tts
    spec:
      securityContext:
        fsGroup: 99
      containers:
      - name: snips
        image: davesilva/snips:0.64.0
        imagePullPolicy: Always
        command: ['snips-tts']
        volumeMounts:
        - name: usr-share-snips
          mountPath: /usr/share/snips
        - name: config
          mountPath: /etc/snips.toml
          subPath: snips.toml
      volumes:
      - name: usr-share-snips
        persistentVolumeClaim:
          claimName: usr-share-snips
      - name: config
        configMap:
          name: snips-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snips-pegasus
  namespace: home-automation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snips-pegasus
  template:
    metadata:
      labels:
        app: snips-pegasus
    spec:
      securityContext:
        fsGroup: 99
      containers:
      - name: snips
        image: davesilva/snips:0.64.0
        imagePullPolicy: Always
        command: ['snips-pegasus']
        volumeMounts:
        - name: usr-share-snips
          mountPath: /usr/share/snips
        - name: var-lib-snips
          mountPath: /var/lib/snips
        - name: config
          mountPath: /etc/snips.toml
          subPath: snips.toml
      volumes:
      - name: usr-share-snips
        persistentVolumeClaim:
          claimName: usr-share-snips
      - name: var-lib-snips
        persistentVolumeClaim:
          claimName: var-lib-snips
      - name: config
        configMap:
          name: snips-config
---
kind: Service
apiVersion: v1
metadata:
  name: snips-pegasus
  namespace: home-automation
spec:
  selector:
    app: snips-pegasus
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snips-pegasus
  namespace: home-automation
spec:
  rules:
  - host: pegasus.home.dmsilva.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: snips-pegasus
            port:
              name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snips-watch
  namespace: home-automation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snips-watch
  template:
    metadata:
      labels:
        app: snips-watch
    spec:
      securityContext:
        fsGroup: 99
      containers:
      - &container-spec
        name: projector-room
        image: davesilva/snips:0.64.0
        imagePullPolicy: Always
        command: ['/bin/sh']
        args:
          - -c
          - >-
            snips-watch --verbose
        volumeMounts:
        - name: usr-share-snips
          mountPath: /usr/share/snips
        - name: dumps
          mountPath: /usr/share/snips-dumps
        - name: config
          mountPath: /etc/snips.toml
          subPath: snips.toml
      - <<: *container-spec
        name: tv-room
        args:
          - -c
          - >-
            snips-watch --verbose \
                        --html \
                        --dump_audio \
                        --dump_audio_site tv-room \
                        --dump_audio_path /usr/share/snips-dumps
      volumes:
      - name: usr-share-snips
        persistentVolumeClaim:
          claimName: usr-share-snips
      - name: dumps
        hostPath:
          path: /var/lib/snips/dumps
          type: DirectoryOrCreate
      - name: config
        configMap:
          name: snips-config
