kubernetes/web-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: web
  namespace: home-automation
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: davesilva/home-automation-web:1.3.0
        imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: web
  namespace: home-automation
spec:
  selector:
    app: web
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web
  namespace: home-automation
spec:
  rules:
  - host: volume.home.dmsilva.com
    http:
      paths:
      - backend:
          serviceName: web
          servicePort: 80
  - host: volume.xxx
    http:
      paths:
      - backend:
          serviceName: web
          servicePort: 80
